--- a/index.html
+++ b/index.html
@@ -207,8 +207,13 @@
                 <img src="projects.png" alt="Projects">
             </div>
             <div class="TodoList">
-                <BorderText>My Projects</BorderText>
-                <p>A showcase of my work and projects.</p>
+                <BorderText>TODO List</BorderText>
+                <p>Everybody uses a ToDo list, whether it's for school, work, or home life. I've
+                designed the TO DO list as a product manager to make it more effective, visually
+                appealing, and easy to track your progress. It uses size as a way to measure
+                priority, from top being the biggest size and most important priority, to shrinking
+                down as you get to less and less important tasks. It also allows the user to view
+                tasks that they've archived or completed. </p>
             </div>
     </section>
 </div>
