--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
 </div>
         
 <div class="BorderFrame3">
-    <section class="AboutME"> 
+    <section class="AI"> 
 
-        <div class="About-Content">
-            <BorderText> Nice cold spot deep water</BorderText>
+        <div class="AIToDo">
+            <BorderText> AI in a ToDo List</BorderText>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Inventore sunt quia in consequuntur doloribus odit libero, 
                 aliquam architecto dolorem quos voluptatibus 
@@ -231,6 +231,22 @@
         <div class="Picture3">
             <img src="fishing.jpg" alt="About Me">  
         </div>
+    </section>          
+</div>
+
+
+<div class="BorderFrame4">
+    <section class="AboutME"> 
+        <div class="Picture4">
+            <img src="fishing.jpg" alt="About Me">  
+        </div>
+        <div class="About-Content">
+            <BorderText> Nice cold spot deep water</BorderText>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Inventore sunt quia in consequuntur doloribus odit libero, 
+                aliquam architecto dolorem quos voluptatibus 
+                illum aspernatur vel rem, eveniet dolor eaque, doloremque ex!</p>
+        </div>        
     </section>          
 </div>
 </section>
