--- a/index.html
+++ b/index.html
@@ -223,10 +223,11 @@
 
         <div class="AIToDo">
             <BorderText> AI in a ToDo List</BorderText>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Inventore sunt quia in consequuntur doloribus odit libero, 
-                aliquam architecto dolorem quos voluptatibus 
-                illum aspernatur vel rem, eveniet dolor eaque, doloremque ex!</p>
+            <p>This TO DO list app has included an AI feature where the User can ask the AI
+            to generate new tasks and categories. For example, if a user wants to create
+            a cooking recipe, they can ask the AI to help create several tasks in a new category, 
+            showing the ingredients needed, a step-by-step process, and pre-heating the oven.
+            A Simple but effective program. </p>
         </div>        
         <div class="Picture3">
             <img src="fishing.jpg" alt="About Me">  
@@ -242,10 +243,11 @@
         </div>
         <div class="About-Content">
             <BorderText> Nice cold spot deep water</BorderText>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Inventore sunt quia in consequuntur doloribus odit libero, 
-                aliquam architecto dolorem quos voluptatibus 
-                illum aspernatur vel rem, eveniet dolor eaque, doloremque ex!</p>
+            <p>Pega6 has been an amazing opportunity to grow my creative
+            skills and teach me how to communicate better thoroughly
+            at presenting. It's allowed me to think outside of the box
+            and helped me lead successful products/applications through
+            My leadership. </p>
         </div>        
     </section>          
 </div>
