--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             A Simple but effective program. </p>
         </div>        
         <div class="Picture3">
-            <img src="fishing.jpg" alt="About Me">  
+            <img src="AboutMe.JPEG" alt="About Me">  
         </div>
     </section>          
 </div>
