--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <img src="AboutMe.JPEG" alt="About Me">  
         </div>
         <div class="About-Content">
-            <BorderText> Nice cold spot deep water</BorderText>
+            <BorderText>Pega6 Conclusion</BorderText>
             <p>Pega6 has been an amazing opportunity to grow my creative
             skills and teach me how to communicate better thoroughly
             at presenting. It's allowed me to think outside of the box
