--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <div class="BorderFrame2">
         <section class="TODO">            
             <div class="Picture2">
-                <img src="projects.png" alt="Projects">
+                <img src="todolist.png" alt="Projects">
             </div>
             <div class="TodoList">
                 <BorderText>TODO List</BorderText>
