--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
             to generate new tasks and categories. For example, if a user wants to create
             a cooking recipe, they can ask the AI to help create several tasks in a new category, 
             showing the ingredients needed, a step-by-step process, and pre-heating the oven.
-            A Simple but effective program. </p>
+            A Simple but effective program. 
+            
+            You can try it out yourself here: <a href="https://todo.steamenginelabs.org/">https://todo.steamenginelabs.org/</a> </p>
         </div>        
         <div class="Picture3">
             <img src="fishing.jpg" alt="About Me">  
