--- a/index.html
+++ b/index.html
@@ -227,9 +227,10 @@
             to generate new tasks and categories. For example, if a user wants to create
             a cooking recipe, they can ask the AI to help create several tasks in a new category, 
             showing the ingredients needed, a step-by-step process, and pre-heating the oven.
-            A Simple but effective program. 
+            A Simple but effective program.
             
-            You can try it out yourself here: <a href="https://todo.steamenginelabs.org/">https://todo.steamenginelabs.org/</a> </p>
+            You can try it out yourself here: <a href="https://todo.steamenginelabs.org/">https://todo.steamenginelabs.org/</a> 
+            With the API Key: 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</p>
         </div>        
         <div class="Picture3">
             <img src="fishing.jpg" alt="About Me">  
