--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             A Simple but effective program. You can try it out yourself here: 
             <a href="https://todo.steamenginelabs.org/">https://todo.steamenginelabs.org/</a> 
             With the API Key: sk-proj-plLZvlGqStJSXhLsCAsU5OVn00E4xInszjRAh3WnfIUsfrfR8wqOH <br>
-            mvFj0KnC2pfYdKWLvrnuOT3BlbkFJFj4MNMMqcqBBzkCvyN2heRSgFuDd7AeiiGJRA5TgV1pj1s-rwFb <br>
+            mvFj0KnC2pfYdKWLvrnuOT3BlbkFJFj4MNMMqcqBBzkCvyN2heRSgFuD<br>d7AeiiGJRA5TgV1pj1s-rwFb
             bxpnTdYWIB2EFxBT_DI1jUA</p>
         </div>        
         <div class="Picture3">
