--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
             showing the ingredients needed, a step-by-step process, and pre-heating the oven.
             A Simple but effective program. You can try it out yourself here: 
             <a href="https://todo.steamenginelabs.org/">https://todo.steamenginelabs.org/</a> 
-            With the API Key: sk-proj-plLZvlGqStJSXhLsCAsU5OVn00E4xInszjRAh3WnfIUsfrfR8wqOH <br>
-            mvFj0KnC2pfYdKWLvrnuOT3BlbkFJFj4MNMMqcqBBzkCvyN2heRSgFuD<br>d7AeiiGJRA5TgV1pj1s-rwFb
+            With the API Key: sk-proj-plLZvlGqStJSXhLsCAsU5OVn00E4xInszjRAh3WnfIUsfrfR8wqOH
+            mvFj0KnC2pfYd <br> KWLvrnuOT3BlbkFJFj4MNMMqcqBBzkCvyN2heRSgFuD<br>d7AeiiGJRA5TgV1pj1s-rwFb
             bxpnTdYWIB2EFxBT_DI1jUA</p>
         </div>        
         <div class="Picture3">
